@@ -34,6 +34,7 @@ Version x.x.x (not yet released)
  * Check if a directory name conflicts with a filename.
  * When file is imported, omit the empty revision 1.1.
  * If a non-trunk default branch is excluded, graft its contents to trunk.
+ * Omit the initial 'dead' revision when a file is added on a branch.
  * Require --symbol-transform pattern to match entire symbol name.
  * Treat files as binary by default instead of as text, because it is safer.
  * Treat auto-props case-insensitively; deprecate --auto-props-ignore-case.
